reflect-demo/tests/errors/invalid_reflect_attribute_path3.rs
#[derive(serde::Deserialize, reflect::Output)]
struct MyStruct {
    #[reflect(output_type = "invalid")]
    field: u32,
}

fn main() {}
